fix 21 syntax
Signed-off-by: xinyual <xinyual@amazon.com>